Fix dragging from detail pane to graph not showing entity

--- a/web/src/main/webapp/css/detail/detail.less
+++ b/web/src/main/webapp/css/detail/detail.less
@@ -6,7 +6,6 @@
 .content {
 
   padding: 2.5em 1em 0 1em;
-  position: relative;
 
   .preview {
     height: 300px;
